--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.log
 /.metadata/
 /RemoteSystemsTempFiles/
-*.classpath
-*.project
-*.settings/
+/target/
+/.classpath
+/*.project
+/.settings
+/*.springBeans
